--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -80,11 +80,9 @@
                     }
                 </div>
                 <div class="mt-4 sm:mt-0 space-x-4">
-                    @if (isLoggedIn()) {
-                    <a href="#" class="hover:text-white transition-colors">Privacy Policy</a>
+                    <a routerLink="/privacy-policy" class="hover:text-white transition-colors">Privacy Policy</a>
                     <span class="text-gray-600">|</span>
-                    <a href="#" class="hover:text-white transition-colors">Terms of Service</a>
-                    }
+                    <a routerLink="/terms-of-service" class="hover:text-white transition-colors">Terms of Service</a>
                 </div>
             </div>
         </div>
